# controller/departmentController.js
@@ -68,8 +68,46 @@ exports.findOne = async (req, res, next) => {
 };
 
 // Update a Tutorial by the id in the request
-exports.update = (req, res) => {
-  
+exports.update = async (req, res, next) => {
+  console.log('update deparment');
+    try {
+        const id = req.params.id;
+        const Body = req.body;
+        const Name = Body.Name || "";
+        const Code = Body.Code || "";
+        let query = {};
+        const deparmentInfo = await deparment.findByPk(id);
+        if(_.isNil(deparmentInfo)){
+            return next(new ApiError(404, "Deparment is not exist"));
+        }
+        if (Name !== "") {
+            query = Object.assign({ Name: Name }, query);
+        }
+        if (Code !== "") {
+            const checkCode = await deparment.findOne({
+              where: {
+                Code: Code
+              }
+            });
+            if(!_.isNil(checkCode)){
+              return next(new ApiError(404, "Code Deparment is exist"));
+            }
+            query = Object.assign({ Code: Code }, query);
+        }
+        
+        await deparment.update(query, {
+            where: {
+              ID: id
+            }
+          });
+       
+        res.json({
+            Mess: "update deparment success",
+            Data: '',
+          });
+    } catch (error) {
+        console.log(error);
+    }
 };
 
 // Delete a Tutorial with the specified id in the request
@@ -108,7 +146,23 @@ exports.delete = async (req, res, next) => {
 };
 
 // Delete all Tutorials from the database.
-exports.deleteAll = (req, res) => {
-  
+exports.deleteAll = async (req, res, next) => {
+  console.log('deleteAll deparment');
+    try {
+        let listIDs = await deparment_employee.findAll({
+          attributes : ['ID'],
+        });
+        console.log(listIDs);
+        listIDs = listIDs.map(x => x.ID);
+        await deparment_employee.update({ deparment_id : null },{ where : { id : listIDs }}); 
+        await deparment.destroy({ truncate: { cascade: true } });
+        
+        res.json({
+            Mess: "delete all deparment success",
+            Data: '',
+          });
+    } catch (error) {
+        console.log(error);
+    }
 };
 
